// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar render with \`right\` prop 1`] = `
.c0 {
  font-family: 'Roboto';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #fff;
  padding: 0 2em;
  height: 60px;
  box-shadow: 0px 9px 10px -7px rgba(50,50,50,0.2);
}

.c1 {
  margin: 0.8em 1em;
  margin-left: 0;
  border-radius: 10px;
  width: 20%;
  height: 80%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <p>
        LOGO
      </p>
    </div>
    <p>
      test
    </p>
  </div>
</div>
`;

exports[`Navbar render with \`searchable\` and \`right\` 1`] = `
.c0 {
  font-family: 'Roboto';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #fff;
  padding: 0 2em;
  height: 60px;
  box-shadow: 0px 9px 10px -7px rgba(50,50,50,0.2);
}

.c1 {
  margin: 0.8em 1em;
  margin-left: 0;
  border-radius: 10px;
  width: 20%;
  height: 80%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  padding: 0.2em;
  border-style: solid;
  border-color: #7f7f7f;
  border-radius: 5px;
  border-width: 1px;
  height: 1.5em;
  width: 20%;
  background-color: #fff;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2:focus-within {
  width: 35%;
}

.c3 {
  color: #7f7f7f;
  width: 100%;
  font-family: 'Roboto';
  background-color: #fff;
  border-width: 0;
  outline: none;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <p>
        LOGO
      </p>
    </div>
    <div
      class="c2"
    >
      <input
        class="c3"
        placeholder="Search"
        type="text"
      />
      <div
        style="width: 24px;"
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            fill="#7D7D7D"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </div>
    </div>
    <p>
      test
    </p>
  </div>
</div>
`;

exports[`Navbar render with \`searchable\` prop 1`] = `
.c0 {
  font-family: 'Roboto';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #fff;
  padding: 0 2em;
  height: 60px;
  box-shadow: 0px 9px 10px -7px rgba(50,50,50,0.2);
}

.c1 {
  margin: 0.8em 1em;
  margin-left: 0;
  border-radius: 10px;
  width: 20%;
  height: 80%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  padding: 0.2em;
  border-style: solid;
  border-color: #7f7f7f;
  border-radius: 5px;
  border-width: 1px;
  height: 1.5em;
  width: 20%;
  background-color: #fff;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2:focus-within {
  width: 35%;
}

.c3 {
  color: #7f7f7f;
  width: 100%;
  font-family: 'Roboto';
  background-color: #fff;
  border-width: 0;
  outline: none;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <p>
        LOGO
      </p>
    </div>
    <div
      class="c2"
    >
      <input
        class="c3"
        placeholder="Search"
        type="text"
      />
      <div
        style="width: 24px;"
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            fill="#7D7D7D"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Navbar render without ´right´ prop 1`] = `
.c0 {
  font-family: 'Roboto';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #fff;
  padding: 0 2em;
  height: 60px;
  box-shadow: 0px 9px 10px -7px rgba(50,50,50,0.2);
}

.c1 {
  margin: 0.8em 1em;
  margin-left: 0;
  border-radius: 10px;
  width: 20%;
  height: 80%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <p>
        LOGO
      </p>
    </div>
  </div>
</div>
`;

exports[`NavbarMenu render with \`right\` prop 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  visibility: hidden;
  opacity: 0;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: fixed;
  width: 100vw;
  height: 0;
  background-color: #fff;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
  overflow: hidden;
  box-shadow: 0px 9px 10px -7px rgba(50,50,50,0.2);
}

.c0 {
  font-family: 'Roboto';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #fff;
  padding: 0 2em;
  height: 60px;
  box-shadow: 0px 9px 10px -7px rgba(50,50,50,0.2);
}

.c3 {
  display: none;
  width: 32px;
  height: 32px;
  position: relative;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.5s ease-in-out;
  transition: 0.5s ease-in-out;
}

.c3:hover {
  opacity: 1;
}

.c3 span {
  display: block;
  position: absolute;
  height: 3px;
  width: 100%;
  background: #7d7d7d;
  border-radius: 1px;
  opacity: 1;
  left: 0;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.25s ease-in-out;
  transition: 0.25s ease-in-out;
}

.c3 span:nth-child(1) {
  top: 0px;
}

.c3 span:nth-child(2) {
  top: 10px;
}

.c3 span:nth-child(3) {
  top: 20px;
}

.c1 {
  margin: 0.8em 1em;
  margin-left: 0;
  border-radius: 10px;
  width: 20%;
  height: 80%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media only screen and (max-width:768px) {
  .c3 {
    display: block;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    display: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <p>
        LOGO
      </p>
    </div>
    <div
      class="c2"
    />
    <div
      class="c3"
      mode="mobile"
    >
      <span />
      <span />
      <span />
    </div>
  </div>
  <div
    class="c4"
  />
</div>
`;

exports[`NavbarMenu render with \`searchable\` and \`menuItems\` 1`] = `
.c0 {
  font-family: 'Roboto';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #fff;
  padding: 0 2em;
  height: 60px;
  box-shadow: 0px 9px 10px -7px rgba(50,50,50,0.2);
}

.c1 {
  margin: 0.8em 1em;
  margin-left: 0;
  border-radius: 10px;
  width: 20%;
  height: 80%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  padding: 0.2em;
  border-style: solid;
  border-color: #7f7f7f;
  border-radius: 5px;
  border-width: 1px;
  height: 1.5em;
  width: 20%;
  background-color: #fff;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2:focus-within {
  width: 35%;
}

.c3 {
  color: #7f7f7f;
  width: 100%;
  font-family: 'Roboto';
  background-color: #fff;
  border-width: 0;
  outline: none;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <p>
        LOGO
      </p>
    </div>
    <div
      class="c2"
    >
      <input
        class="c3"
        placeholder="Search"
        type="text"
      />
      <div
        style="width: 24px;"
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            fill="#7D7D7D"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`NavbarMenu render with \`searchable\` and \`right\` 1`] = `
.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  visibility: hidden;
  opacity: 0;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: fixed;
  width: 100vw;
  height: 0;
  background-color: #fff;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
  overflow: hidden;
  box-shadow: 0px 9px 10px -7px rgba(50,50,50,0.2);
}

.c0 {
  font-family: 'Roboto';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #fff;
  padding: 0 2em;
  height: 60px;
  box-shadow: 0px 9px 10px -7px rgba(50,50,50,0.2);
}

.c5 {
  display: none;
  width: 32px;
  height: 32px;
  position: relative;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.5s ease-in-out;
  transition: 0.5s ease-in-out;
}

.c5:hover {
  opacity: 1;
}

.c5 span {
  display: block;
  position: absolute;
  height: 3px;
  width: 100%;
  background: #7d7d7d;
  border-radius: 1px;
  opacity: 1;
  left: 0;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.25s ease-in-out;
  transition: 0.25s ease-in-out;
}

.c5 span:nth-child(1) {
  top: 0px;
}

.c5 span:nth-child(2) {
  top: 10px;
}

.c5 span:nth-child(3) {
  top: 20px;
}

.c1 {
  margin: 0.8em 1em;
  margin-left: 0;
  border-radius: 10px;
  width: 20%;
  height: 80%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  padding: 0.2em;
  border-style: solid;
  border-color: #7f7f7f;
  border-radius: 5px;
  border-width: 1px;
  height: 1.5em;
  width: 35%;
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  color: #7f7f7f;
  width: 100%;
  font-family: 'Roboto';
  background-color: #fff;
  border-width: 0;
  outline: none;
}

@media only screen and (max-width:768px) {
  .c5 {
    display: block;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    display: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <p>
        LOGO
      </p>
    </div>
    <div
      class="c2"
    >
      <input
        class="c3"
        placeholder="Search"
        type="text"
      />
      <div
        style="width: 24px;"
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            fill="#7D7D7D"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </div>
    </div>
    <div
      class="c4"
    />
    <div
      class="c5"
      mode="mobile"
    >
      <span />
      <span />
      <span />
    </div>
  </div>
  <div
    class="c6"
  />
</div>
`;

exports[`NavbarMenu render with \`searchable\` prop 1`] = `
.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  visibility: hidden;
  opacity: 0;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: fixed;
  width: 100vw;
  height: 0;
  background-color: #fff;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
  overflow: hidden;
  box-shadow: 0px 9px 10px -7px rgba(50,50,50,0.2);
}

.c0 {
  font-family: 'Roboto';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #fff;
  padding: 0 2em;
  height: 60px;
  box-shadow: 0px 9px 10px -7px rgba(50,50,50,0.2);
}

.c5 {
  display: none;
  width: 32px;
  height: 32px;
  position: relative;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.5s ease-in-out;
  transition: 0.5s ease-in-out;
}

.c5:hover {
  opacity: 1;
}

.c5 span {
  display: block;
  position: absolute;
  height: 3px;
  width: 100%;
  background: #7d7d7d;
  border-radius: 1px;
  opacity: 1;
  left: 0;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.25s ease-in-out;
  transition: 0.25s ease-in-out;
}

.c5 span:nth-child(1) {
  top: 0px;
}

.c5 span:nth-child(2) {
  top: 10px;
}

.c5 span:nth-child(3) {
  top: 20px;
}

.c1 {
  margin: 0.8em 1em;
  margin-left: 0;
  border-radius: 10px;
  width: 20%;
  height: 80%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  padding: 0.2em;
  border-style: solid;
  border-color: #7f7f7f;
  border-radius: 5px;
  border-width: 1px;
  height: 1.5em;
  width: 35%;
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  color: #7f7f7f;
  width: 100%;
  font-family: 'Roboto';
  background-color: #fff;
  border-width: 0;
  outline: none;
}

@media only screen and (max-width:768px) {
  .c5 {
    display: block;
  }
}

@media only screen and (max-width:768px) {
  .c4 {
    display: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <p>
        LOGO
      </p>
    </div>
    <div
      class="c2"
    >
      <input
        class="c3"
        placeholder="Search"
        type="text"
      />
      <div
        style="width: 24px;"
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            fill="#7D7D7D"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </div>
    </div>
    <div
      class="c4"
    />
    <div
      class="c5"
      mode="mobile"
    >
      <span />
      <span />
      <span />
    </div>
  </div>
  <div
    class="c6"
  />
</div>
`;

exports[`NavbarMenu render with \`searchable\`, \`right\` and \`menuItems\` 1`] = `
.c0 {
  font-family: 'Roboto';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #fff;
  padding: 0 2em;
  height: 60px;
  box-shadow: 0px 9px 10px -7px rgba(50,50,50,0.2);
}

.c1 {
  margin: 0.8em 1em;
  margin-left: 0;
  border-radius: 10px;
  width: 20%;
  height: 80%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 {
  padding: 0.2em;
  border-style: solid;
  border-color: #7f7f7f;
  border-radius: 5px;
  border-width: 1px;
  height: 1.5em;
  width: 20%;
  background-color: #fff;
  -webkit-transition: width 0.5s;
  transition: width 0.5s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2:focus-within {
  width: 35%;
}

.c3 {
  color: #7f7f7f;
  width: 100%;
  font-family: 'Roboto';
  background-color: #fff;
  border-width: 0;
  outline: none;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <p>
        LOGO
      </p>
    </div>
    <div
      class="c2"
    >
      <input
        class="c3"
        placeholder="Search"
        type="text"
      />
      <div
        style="width: 24px;"
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
            fill="#7D7D7D"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </div>
    </div>
    <p>
      test
    </p>
  </div>
</div>
`;

exports[`NavbarMenu render without ´right´ prop 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  visibility: hidden;
  opacity: 0;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: fixed;
  width: 100vw;
  height: 0;
  background-color: #fff;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
  overflow: hidden;
  box-shadow: 0px 9px 10px -7px rgba(50,50,50,0.2);
}

.c0 {
  font-family: 'Roboto';
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #fff;
  padding: 0 2em;
  height: 60px;
  box-shadow: 0px 9px 10px -7px rgba(50,50,50,0.2);
}

.c3 {
  display: none;
  width: 32px;
  height: 32px;
  position: relative;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.5s ease-in-out;
  transition: 0.5s ease-in-out;
}

.c3:hover {
  opacity: 1;
}

.c3 span {
  display: block;
  position: absolute;
  height: 3px;
  width: 100%;
  background: #7d7d7d;
  border-radius: 1px;
  opacity: 1;
  left: 0;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: 0.25s ease-in-out;
  transition: 0.25s ease-in-out;
}

.c3 span:nth-child(1) {
  top: 0px;
}

.c3 span:nth-child(2) {
  top: 10px;
}

.c3 span:nth-child(3) {
  top: 20px;
}

.c1 {
  margin: 0.8em 1em;
  margin-left: 0;
  border-radius: 10px;
  width: 20%;
  height: 80%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media only screen and (max-width:768px) {
  .c3 {
    display: block;
  }
}

@media only screen and (max-width:768px) {
  .c2 {
    display: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <p>
        LOGO
      </p>
    </div>
    <div
      class="c2"
    />
    <div
      class="c3"
      mode="mobile"
    >
      <span />
      <span />
      <span />
    </div>
  </div>
  <div
    class="c4"
  />
</div>
`;
